testdata/baselines/reference/submodule/conformance/emitArrowFunctionWhenUsingArguments03_ES6(alwaysstrict=false).errors.txt
error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
emitArrowFunctionWhenUsingArguments03_ES6.ts(1,5): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
==== emitArrowFunctionWhenUsingArguments03_ES6.ts (1 errors) ====
    var arguments;
        ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    var a = () => arguments;